--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.7",
+    "@mui/material": "^6.4.7",
     "dotenv": "^16.4.7",
     "react": "^19.0.0",
     "react-accessible-accordion": "^5.0.0",
     "react-dom": "^19.0.0",
+    "react-select": "^5.10.1",
     "react-select-async-paginate": "^0.7.9"
   },
   "devDependencies": {
