--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,14 @@
 {
   "builds": [
     {
-      "src": "vite.config.js",
+      "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
         "distDir": "dist"
       }
     }
   ],
+
   "routes": [
     {
       "src": "/(.*)",
