--- a/vercel.json
+++ b/vercel.json
@@ -8,11 +8,10 @@
       }
     }
   ],
-
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/index.html"
+      "dest": "/dist/index.html"
     }
   ]
 }
